@@ -23,7 +23,10 @@ $(LSP_LLTL_LIB_BIN)/main/parray.o: main/parray.cpp \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/parray.h \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/version.h \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/spec.h \
- $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/types.h
+ $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/types.h \
+ $(LSP_COMMON_LIB_INC)/lsp-plug.in/stdlib/stdlib.h \
+ $(LSP_COMMON_LIB_INC)/lsp-plug.in/common/version.h \
+ $(LSP_COMMON_LIB_INC)/lsp-plug.in/common/types.h
 $(LSP_LLTL_LIB_BIN)/main/iterator.o: main/iterator.cpp \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/iterator.h \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/version.h \
@@ -33,7 +36,10 @@ $(LSP_LLTL_LIB_BIN)/main/darray.o: main/darray.cpp \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/darray.h \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/version.h \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/spec.h \
- $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/types.h
+ $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/types.h \
+ $(LSP_COMMON_LIB_INC)/lsp-plug.in/stdlib/stdlib.h \
+ $(LSP_COMMON_LIB_INC)/lsp-plug.in/common/version.h \
+ $(LSP_COMMON_LIB_INC)/lsp-plug.in/common/types.h
 $(LSP_LLTL_LIB_BIN)/main/bitset.o: main/bitset.cpp \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/bitset.h \
  $(LSP_LLTL_LIB_INC)/lsp-plug.in/lltl/version.h \
