@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 0.5.5 ===
+* Better support of <stdlib.h> qsort_r() calls for different platforms.
 
 === 0.5.4 ===
 * Added set_n to lltl::parray and lltl::darray with index specification.
